# DBLM-Btrfs-Layout-Manager

./: .gitignore  README.md  app.py  pyproject.toml
core/: __init__.py  boot.py  btrfs.py  fstab.py  logging.py  migrate.py  packages.py  profiles.py  snapper.py  state.py  system.py
ui/: __init__.py  common.py  styles.tcss
ui/screens/: __init__.py  apply.py  backups.py  boot.py  dashboard.py  dependencies.py  logs.py  plan.py  rollback.py  snapper.py  subvolumes.py
ui/widgets/: __init__.py  log_view.py  plan_table.py  status_list.py  summary_box.py
